# gtest

./: CMakeLists.txt  add.h  azure-pipelines.yml  unittest.cpp
googletest/lib/: gtest.lib  gtest_main.lib  gtest_maind.lib
